<resources>
    <string name="app_name">Closet</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="accessories">Accessories</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="filter">Filter</string>
    <string name="colors">Colors</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <string name="beige">Nude</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="silver">Silver</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="brown">Brown</string>
    <string name="purple">Purple</string>
    <string name="gold">Gold</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="apply">APPLY</string>
    <string name="footwear">FootWear</string>
    <string name="bottom">Bottom</string>
    <string name="top">Top</string>
    <string name="save">Save</string>
    <string name="formal">Formal</string>
    <string name="casual">Casual</string>
    <string name="party">Party</string>
    <string name="special">Special</string>
    <string name="caution">Select a Category, Style and Color</string>
    <string name="exit">Click back to exit</string>
    <string name="filtered">Closet Filtered.</string>
    <string name="no_match">No Match</string>
    <string name="deletequery">Do you want to Delete?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_styles">Select Styles</string>
    <string name="select_category">Select Category</string>
    <string name="select_colors">Select Colors</string>
    <string name="filter_style">Style</string>
    <string name="dialog_delete">DELETE</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="screencrop">Screen Crop</string>
    <string name="scrcropservive">Screen Crop activated.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appintro_first">An Easy way to Organize your Clothes, Accessories and Footwear</string>
    <string name="appintro_second">Upload Apparel Pictures and Create Outfits</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="appintro_third">Get Inspired and Find Matching Appareal from your Closet</string>
    <string name="signin_hint">Sign in for better app experience</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signin_hint_two">By signing in,you agree to our Terms and Privacy Policy</string>
    <string name="name">User Name</string>
    <string name="gmail">Gmail</string>
    <string name="website">Webside</string>
    <string name="bio">Bio</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="outerwear">OuterWear</string>
    <string name="home">Home</string>
    <string name="closet">Closet</string>
    <string name="lookbook">Look Book</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="rateapp">Rate App</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="username">Username</string>
    <string name="destription">Describe look with Tags</string>
    <string name="background_color">BG Color</string>
    <string name="name_the_look">Name the look</string>
    <string name="position_hint">Increase/Decrease size of picture</string>
    <string name="eraser_hint">Erase/Unerase by selecting brush size</string>
    <string name="magicwand_hint">Remove/Restore similar colors by sliding the bar</string>
    <string name="click_here_to_add_clothes">Click here to add clothes</string>
    <string name="post">Post</string>
    <string name="describe_with_tags">Describe with Tags</string>
    <string name="create_look">CREATE OUTFIT</string>
    <string name="my_uploads">My Uploads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="user_name">user name</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="select_pictures_to_create_a_look_in_closet">Select pictures to create a look in closet</string>
    <string name="sharequote">I thought you would like this, click here</string>
    <string name="bookmark_saved">Saved</string>
    <string name="matching_apparel_from_your_closet">Matching apparel from your Closet</string>
    <string name="sample_pics">Sample Pics</string>
    <string name="sample_pics_heading">Sample Pics</string>
    <string name="outfits">Outfits</string>
    <string name="first_celebration">Congratulations! You have added your 1st apparel</string>
    <string name="second_celebration">Second apparel added, Now lets create a Look</string>
    <string name="post_celeb">Hurray! You have posted your 1st Post.</string>

    <string name="facebook_app_id">979389419115381</string>
    <string name="fb_login_protocol_scheme">fb979389419115381</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="phone_login">Phone Login</string>
    <string name="invalidemailtext">Please enter valid email to continue</string>
    <string name="passwordresetlink">Password reset link sent</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterpassword">Enter Password</string>
    <string name="verifyemail">Verify Email to Login</string>
    <string name="cnfpassword">Please confirm Password</string>
    <string name="passwordmismatch">Passwords don\'t match</string>
    <string name="verificationlinksent">Verification Link Sent</string>
    <string name="profilesaved">Profile Saved</string>
    <string name="addsuername">Please add UserName</string>
    <string name="postdelete">Deleted</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="matching_clothes_from_your_closet">Matching Clothes From Your Closet</string>
    <string name="bottom_colors">Bottom Colors</string>
    <string name="top_colors">Top Colors</string>
    <string name="footwear_colors">FootWear Colors</string>
    <string name="accessories_color">Accessories Color</string>
    <string name="cutouttut">Click on Background to remove</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
