<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/alldress" />


    <TextView
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/signin_hint"
        android:textColor="@color/selected_tab"
        android:textSize="20dp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/google_lyt"
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_login"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_google_plus"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/google"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />

        </LinearLayout>
    </FrameLayout>

        <FrameLayout
            android:id="@+id/facebook_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_lyt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <!---      <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/ic_facebook"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/facebook"
                    android:textColor="@color/colorAccent"
                    android:textSize="20dp" />

            </LinearLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_alignParentBottom="true"
            android:text="@string/signin_hint_two"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp"
            />
    </RelativeLayout>

</LinearLayout>