<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="my.closet.fashion.style.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnr"
        android:orientation="horizontal">
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_below="@+id/lnr"
        android:id="@+id/acctxti"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignBottom="@id/acctxti"
        android:layout_alignTop="@id/acctxti"
        android:layout_toEndOf="@id/acctxti"
        android:gravity="fill_vertical"
        android:text="@string/accessories"
        android:textColor="#e0e0e0"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/acctxti"
        android:id="@+id/lnr1"
        android:orientation="vertical"
        tools:context="my.closet.fashion.style.MainActivity">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foottxt"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_marginStart="4dp"
        android:layout_below="@+id/lnr3"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_alignBottom="@id/foottxt"
        android:layout_alignTop="@id/foottxt"
        android:layout_toEndOf="@id/foottxt"
        android:gravity="fill_vertical"
        android:text="@string/footwear"
        android:textColor="#e0e0e0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/foottxt"
        android:id="@+id/lnr2"
        android:orientation="horizontal"
        >

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/footrecycler">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_marginStart="4dp"
        android:id="@+id/bttmtxt"
        android:layout_below="@+id/lnr4"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/bttmtxt"
        android:layout_alignTop="@id/bttmtxt"
        android:layout_toEndOf="@id/bttmtxt"
        android:gravity="fill_vertical"
        android:text="@string/bottom"
        android:textSize="12sp"
        android:textColor="#e0e0e0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/lnr3"
        tools:context="my.closet.fashion.style.MainActivity"
        android:orientation="horizontal"
        android:layout_below="@+id/bttmtxt">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottomrecycle">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/toptxt"
        android:id="@+id/lnr4"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/toprecycle">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:id="@+id/toptxt"
        android:layout_below="@+id/lnr1"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/toptxt"
        android:layout_alignTop="@id/toptxt"
        android:layout_toEndOf="@id/toptxt"
        android:gravity="fill_vertical"
        android:text="@string/top"
        android:textSize="12sp"
        android:textColor="#e0e0e0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true">

    </RelativeLayout>


</RelativeLayout>